--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.98.4",
     "bs58": "^6.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "three": "^0.158.0"
+    "stream-browserify": "^3.0.0",
+    "three": "^0.158.0",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
